fix: fixed text-align and display flex from row pink

--- a/BABYSTEPS CSS/css/style-3.css
+++ b/BABYSTEPS CSS/css/style-3.css
@@ -6,6 +6,7 @@ body {
   align-items: center;
   min-height: 100vh;
   margin: 0;
+  /* el text-align automaticamente es left */
 }
 
 .color-container {
@@ -13,7 +14,6 @@ body {
   padding: 2rem 3rem;
   border-radius: 0.5rem;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-  text-align: left;
 }
 
 h1 {
@@ -28,6 +28,7 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 5px;
+  
 }
 
 .color-row {
@@ -41,13 +42,11 @@ h1 {
   font-weight: 600;
   padding: 1rem;
   border-radius: 3px;
-  text-align: center;
 }
 
 .half-row {
   display: flex;
   gap: 5px;
-  flex: 2;
 }
 /* === Colores === */
 
